--- a/package.json
+++ b/package.json
@@ -5,20 +5,23 @@
     "main": "webpack.config.js",
     "dependencies": {
         "html-webpack-plugin": "^5.3.1",
+        "intersection-observer": "^0.12.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-icons": "^4.2.0",
+        "styled-components": "^5.3.0",
         "webpack": "^5.38.1",
         "webpack-cli": "^4.7.0",
         "wepack-cli": "^0.0.1-security"
     },
-    "standard": {
+    "semistandard": {
         "ignore": [
             "/api/**"
         ]
     },
     "eslintConfig": {
         "extends": [
-            "./node_modules/standard/eslintrc.json"
+            "./node_modules/semistandard/eslintrc.json"
         ]
     },
     "devDependencies": {
@@ -27,6 +30,10 @@
         "@babel/preset-react": "^7.13.13",
         "babel": "^6.23.0",
         "babel-loader": "^8.2.2",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^3.4.0",
+        "prettier": "^2.3.0",
+        "semistandard": "^16.0.0",
         "standard": "^16.0.3",
         "webpack-dev-server": "^3.11.2"
     },
