--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
     "description": "**¡Sígueme en Youtube para más contenido de React y Javascript!** 👉 https://www.youtube.com/midudev",
     "main": "webpack.config.js",
     "dependencies": {
+        "apollo-boost": "^0.4.9",
+        "graphql": "^15.5.0",
         "html-webpack-plugin": "^5.3.1",
         "intersection-observer": "^0.12.0",
         "react": "^17.0.2",
+        "react-apollo": "^3.1.5",
         "react-dom": "^17.0.2",
         "react-icons": "^4.2.0",
         "styled-components": "^5.3.0",
