--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "**¡Sígueme en Youtube para más contenido de React y Javascript!** 👉 https://www.youtube.com/midudev",
     "main": "webpack.config.js",
     "dependencies": {
+        "@reach/router": "^1.3.4",
         "apollo-boost": "^0.4.9",
         "graphql": "^15.5.0",
         "html-webpack-plugin": "^5.3.1",
@@ -44,7 +45,7 @@
         "vercel-build": "npm run build",
         "build": "webpack",
         "lint": "standard",
-        "dev": "webpack serve",
+        "dev": "webpack serve --history-api-fallback",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
