--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
         "graphql": "^15.5.0",
         "html-webpack-plugin": "^5.3.1",
         "intersection-observer": "^0.12.0",
+        "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-apollo": "^3.1.5",
         "react-dom": "^17.0.2",
+        "react-helmet": "^6.1.0",
         "react-icons": "^4.2.0",
         "styled-components": "^5.3.0",
         "webpack": "^5.38.1",
@@ -34,19 +36,23 @@
         "@babel/preset-react": "^7.13.13",
         "babel": "^6.23.0",
         "babel-loader": "^8.2.2",
+        "cypress": "^7.5.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^3.4.0",
         "prettier": "^2.3.0",
         "semistandard": "^16.0.0",
         "standard": "^16.0.3",
-        "webpack-dev-server": "^3.11.2"
+        "webpack-dev-server": "^3.11.2",
+        "webpack-pwa-manifest": "^4.3.0",
+        "workbox-webpack-plugin": "^6.1.5"
     },
     "scripts": {
         "vercel-build": "npm run build",
         "build": "webpack",
         "lint": "standard",
         "dev": "webpack serve --history-api-fallback",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "serve:dev": "webpack --mode development && npx serve dist -s",
+        "test": "cypress open"
     },
     "repository": {
         "type": "git",
